# nodegraph

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build_rez.sh  compile_commands.json  config.bat  config_all.sh  lsp_build.bat  prebuild.bat  prebuild.sh  pull_all.bat  settings.toml  submit.bat  subs.bat  temp.cpp  theme.toml
.github/workflows/: builds.yml
app/: CMakeLists.txt  demo.cpp  demo.h  main.cpp  nodegraph.cpp
app/cmake/: demo_common.cmake  nodegraph_app_common.cmake
app/nodes/: node_oscillator.cpp  node_oscillator.h
cmake/: all.cmake
include/nodegraph/: canvas.h  canvas_imgui.h  fonts.h  fontstash.h  math_utils.h  theme.h
include/nodegraph/model/: flow_data.h  graph.h  node.h  parameter.h  pin.h
include/nodegraph/old/model/: graph.h  memory.h  node.h  pin.h
include/nodegraph/old/view/: layout_control.h  node_layout.h  viewnode.h
include/nodegraph/time/: timer.h
include/nodegraph/view/: canvas.h  canvas_imgui.h  canvas_vg.h  graphview.h  layout.h  layout_control.h  node_layout.h  node_style.h  viewnode.h
include/nodegraph/vulkan/: vulkan_imgui_texture.h
include/nodegraph/widgets/: knob.h  layout.h  node.h  slider.h  widget.h  widget_label.h  widget_slider.h  widget_socket.h  widget_waveslider.h
src/: CMakeLists.txt  canvas.cpp  canvas_imgui.cpp  fonts.cpp  theme.cpp
src/model/: graph.cpp  node.cpp  nodegraph.test.cpp  pin.cpp
src/old/model/: graph.cpp  parameter.cpp
src/old/view/: node_layout.cpp
src/view/: canvas.cpp  canvas_imgui.cpp  canvas_vg.cpp  graphview.cpp  node_layout.cpp  viewnode.cpp
src/vulkan/: vulkan_imgui_texture.cpp
src/widgets/: knob.cpp  layout.cpp  node.cpp  slider.cpp  widget.cpp  widget_knob.cpp  widget_label.cpp  widget_slider.cpp  widget_socket.cpp  widget_text.cpp  widget_waveslider.cpp
tests/: CMakeLists.txt
